--- a/.github/workflows/Build-X86-Mini.yml
+++ b/.github/workflows/Build-X86-Mini.yml
@@ -11,7 +11,7 @@ env:
   ARCH_KERNEL: amd64
   UPLOAD_BIN_DIR: false
   FIRMWARE_RELEASE: true
-  FIRMWARE_TAG: X86-Mini
+  FIRMWARE_TAG: X86M
   TZ: Asia/Shanghai
 
 jobs:
