--- a/.github/workflows/Auto-Daily-Cleanup.yml
+++ b/.github/workflows/Auto-Daily-Cleanup.yml
@@ -1,9 +1,8 @@
 name: Auto Daily Cleanup
 
 on:
+  repository_dispatch:
   workflow_dispatch:
-  schedule:
-    - cron: 0 3 * * *
 
 jobs:
   Cleaning:
