--- a/.github/workflows/Build-X86P.yml
+++ b/.github/workflows/Build-X86P.yml
@@ -179,6 +179,7 @@ jobs:
           - ⚽ 固件源码: ${{ env.REPO_URL }}
           - 💝 源码分支: ${{ env.REPO_BRANCH }}
           - 🚀 内核版本: ${{ env.KERNEL }}
+          - 🌐 默认地址: 192.168.5.1
           ### 🧊 固件版本
           - 固件编译前最后一次➦[主源码](${{ env.REPO_URL }})更新记录
           - ${{ env.COMMIT_AUTHOR }}
