--- a/.github/workflows/Daily-Cleanup.yml
+++ b/.github/workflows/Daily-Cleanup.yml
@@ -9,17 +9,17 @@ jobs:
     runs-on: ubuntu-22.04
 
     steps:
-    - name: Delete Old Workflows
-      uses: Mattraks/delete-workflow-runs@main
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        retain_days: 7
-        keep_minimum_runs: 0
 
-    - name: Delete Old Releases
-      uses: dev-drprasad/delete-older-releases@master
+    - name: 删除运行记录
+      uses: GitRML/delete-workflow-runs@main
       with:
-        keep_latest: 15
+        retain_days: 1
+        keep_minimum_runs: 1
+        token: ${{ env.GITHUB_TOKEN }}
+
+    - name: 删除自动发布的旧固件
+      uses: dev-drprasad/delete-older-releases@v0.1.0
+      if: env.UPLOAD_RELEASE == 'true' && !cancelled()
+      with:
+        keep_latest: 4
         delete_tags: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
