--- a/.github/workflows/Clean-Cache.yml
+++ b/.github/workflows/Clean-Cache.yml
@@ -38,28 +38,28 @@ jobs:
         echo "--------------------------硬盘信息--------------------------"
         echo "硬盘数量: $(ls /dev/sd* | grep -v [1-9] | wc -l)" && df -hT
     
-    - name: 初始化编译环境
-      env:
-        DEBIAN_FRONTEND: noninteractive
-      run: |
-        set +e
-        docker rmi `docker images -q`
-        echo "Deleting files, please wait ..."
-        sudo rm -rf \
-          /usr/share/dotnet \
-          /etc/mysql \
-          /etc/php
-        sudo -E apt-get -y purge azure-cli ghc*  zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
-        sudo -E apt-get update
-        sudo -E apt-get -y install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 \
-        ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged \
-        help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev \
-        libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp ninja-build \
-        p7zip p7zip-full patch pkgconf python2.7 python3 python3-pyelftools python3-setuptools qemu-utils rsync \
-        scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
-        sudo -E apt-get -y autoremove --purge
-        sudo -E apt-get clean
-        sudo timedatectl set-timezone "$TZ"
+    # - name: 初始化编译环境
+    #   env:
+    #     DEBIAN_FRONTEND: noninteractive
+    #   run: |
+    #     set +e
+    #     docker rmi `docker images -q`
+    #     echo "Deleting files, please wait ..."
+    #     sudo rm -rf \
+    #       /usr/share/dotnet \
+    #       /etc/mysql \
+    #       /etc/php
+    #     sudo -E apt-get -y purge azure-cli ghc*  zulu* hhvm llvm* firefox google* dotnet* powershell openjdk* mysql* php*
+    #     sudo -E apt-get update
+    #     sudo -E apt-get -y install ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential bzip2 \
+    #     ccache cmake cpio curl device-tree-compiler fastjar flex gawk gettext gcc-multilib g++-multilib git gperf haveged \
+    #     help2man intltool libc6-dev-i386 libelf-dev libfuse-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev \
+    #     libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev libssl-dev libtool lrzsz mkisofs msmtp ninja-build \
+    #     p7zip p7zip-full patch pkgconf python2.7 python3 python3-pyelftools python3-setuptools qemu-utils rsync \
+    #     scons squashfs-tools subversion swig texinfo uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev
+    #     sudo -E apt-get -y autoremove --purge
+    #     sudo -E apt-get clean
+    #     sudo timedatectl set-timezone "$TZ"
 
     - name: 克隆源码
       run: |
