--- a/.github/workflows/Build-R2S.yml
+++ b/.github/workflows/Build-R2S.yml
@@ -4,7 +4,7 @@ on:
   repository_dispatch:
   workflow_dispatch:
   schedule:
-    - cron: 0 17 * * 6
+    - cron: 0 17 * * *
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
